Corrected some dic
