# swagger.yaml
@@ -578,6 +578,63 @@ definitions:
       \ Each user is unique inside a given organisation, but users are not shared\
       \ between\norganisations. Required apply only for creation of the object."
     x-go-package: "github.com/titouanfreville/popcubeapi/models"
+  databaseError:
+    type: "object"
+    properties:
+      Error:
+        description: "in:body"
+        $ref: "#/definitions/genericErrorModel"
+    description: "databaseError is an error object to tell what is happening when\
+      \ we encounter issue with database"
+    x-go-package: "github.com/titouanfreville/popcubeapi/api"
+  deleteMessage:
+    type: "object"
+    properties:
+      Message:
+        description: "in:body"
+        $ref: "#/definitions/deleteMessageModel"
+    title: "deleteMessage return object to confirm correct deletion of an item."
+    x-go-package: "github.com/titouanfreville/popcubeapi/api"
+  deleteMessageModel:
+    type: "object"
+    properties:
+      message:
+        type: "string"
+        description: "More information about why is it or isn't it removed"
+        x-go-name: "Message"
+      removed_object:
+        type: "object"
+        description: "The object we where trying to remove"
+        properties: {}
+        x-go-name: "Object"
+      status:
+        type: "integer"
+        format: "int64"
+        description: "Status"
+        x-go-name: "Status"
+      success:
+        type: "boolean"
+        description: "Correctly removed ?"
+        x-go-name: "Success"
+    title: "deleteMessageModel is an object to confirm correct deletion of an item."
+    x-go-package: "github.com/titouanfreville/popcubeapi/api"
+  generalOk:
+    type: "object"
+    properties:
+      message:
+        type: "string"
+        description: "What you want to say\nin:body"
+        x-go-name: "Message"
+    description: "generalOk default object style to return if correct"
+    x-go-package: "github.com/titouanfreville/popcubeapi/api"
+  genericError:
+    type: "object"
+    properties:
+      Error:
+        description: "in:body"
+        $ref: "#/definitions/genericErrorModel"
+    description: "genericError general error when unexpected errors occured"
+    x-go-package: "github.com/titouanfreville/popcubeapi/api"
   genericErrorModel:
     type: "object"
     properties:
@@ -608,6 +665,15 @@ definitions:
     title: "AppError Type used to structure error reporting for popcube chat project."
     x-go-name: "AppError"
     x-go-package: "github.com/titouanfreville/popcubeapi/utils"
+  wrongEntityError:
+    type: "object"
+    properties:
+      Error:
+        description: "in:body"
+        $ref: "#/definitions/genericErrorModel"
+    description: "wrongEntityError is an error object to inform that the provided\
+      \ object was not correctly formated"
+    x-go-package: "github.com/titouanfreville/popcubeapi/api"
 responses:
   avatarArraySuccess:
     description: "avatarSlice Array of avatars"
@@ -626,23 +692,6 @@ responses:
       $ref: "#/definitions/genericErrorModel"
   defaultOk:
     description: "generalOk default object style to return if correct"
-  deleteMessage:
-    description: "deleteMessage return object to confirm correct deletion of an item."
-    schema:
-      type: "object"
-      properties: {}
-    headers:
-      message:
-        type: "string"
-        description: "More information about why is it or isn't it removed"
-      removed_object: null
-      status:
-        type: "integer"
-        format: "int64"
-        description: "Status"
-      success:
-        type: "boolean"
-        description: "Correctly removed ?"
   genericError:
     description: "genericError general error when unexpected errors occured"
     schema:
